--- a/src/template.html
+++ b/src/template.html
@@ -4,7 +4,7 @@
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width,initial-scale=1.0'>
   <meta name='theme-color' content='#333333'>
-  <link rel="stylesheet" href="bootstrap.min.css">
+  <link rel="stylesheet" href="/bootstrap.min.css">
 
   %sapper.base%
 
