--- a/src/template.html
+++ b/src/template.html
@@ -5,6 +5,7 @@
   <meta name='viewport' content='width=device-width,initial-scale=1.0'>
   <meta name='theme-color' content='#333333'>
   <link rel="stylesheet" href="/neumorphism/bootstrap.min.css">
+  <link rel="stylesheet" href="/neumorphism/solarized-dark.css">
 
   %sapper.base%
 
@@ -21,7 +22,7 @@
        the current page has one -->
   %sapper.head%
 </head>
-<body>
+<body class="bg-dark">
   <!-- The application will be rendered inside this element,
        because `src/client.js` references it -->
   <div id='sapper'>%sapper.html%</div>
